Lowercase C in courtroom

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <header>
       <div class="container">
-        <h1>Courtroom</h1>
+        <h1>courtroom</h1>
         <h2></h2>
 
         <section id="downloads">
