--- a/index.html
+++ b/index.html
@@ -29,13 +29,7 @@
 
     <div class="container">
       <section id="main_content">
-        <h3>
-          <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true">
-            <span class="octicon octicon-link"></span>
-          </a>
-
-          Courtroom
-        </h3>
+        <h3>Demo</h3>
 
         <form>
           Min 5 characters: <br>
@@ -53,6 +47,19 @@
           Must not equal 'paulo':<br>
           <div id="not_equals_paulo"><input type="text"> <img src="images/failed.png"></div>
         </form>
+      </section>
+      <br>
+      <section id="code">
+        <h3>Code</h3>
+        <p>The code for the five examples above is super clean and super easy!</p>
+
+        <script type="text/plain" style="display: block;">
+          c.trial("min_5").laws.minLength(5);
+          c.trial("max_5").laws.maxLength(5);
+          c.trial("contains_hello").laws.contains("hello");
+          c.trial("equals_james").laws.is("james");
+          c.trial("not_equals_paulo").laws.not("paulo");
+        </script>
       </section>
     </div>
   </body>
