Use Google Code Prettify

--- a/index.html
+++ b/index.html
@@ -53,14 +53,16 @@
         <h3>Code</h3>
         <p>The code for the five examples above is super clean and super easy!</p>
 
-        <script type="text/plain" style="display: block;">
-          c.trial("min_5").laws.minLength(5);
-          c.trial("max_5").laws.maxLength(5);
-          c.trial("contains_hello").laws.contains("hello");
-          c.trial("equals_james").laws.is("james");
-          c.trial("not_equals_paulo").laws.not("paulo");
-        </script>
+        <pre class="prettyprint linenums">
+    c.trial("min_5").laws.minLength(5);
+    c.trial("max_5").laws.maxLength(5);
+    c.trial("contains_hello").laws.contains("hello");
+    c.trial("equals_james").laws.is("james");
+    c.trial("not_equals_paulo").laws.not("paulo");
+        </pre>
       </section>
     </div>
+
+    <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js?skin=sunburst"></script>
   </body>
 </html>
