--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <script data-main="javascripts/main" src="javascripts/require.js"></script>
 
     <title>courtroom by Jameskmonger</title>
+
+    <style>
+    li.L0, li.L1, li.L2, li.L3,
+    li.L5, li.L6, li.L7, li.L8
+    { list-style-type: decimal !important }
+    </style>
   </head>
 
   <body>
@@ -53,13 +59,13 @@
         <h3>Code</h3>
         <p>The code for the five examples above is super clean and super easy!</p>
 
-        <pre class="prettyprint linenums">
+<pre class="prettyprint linenums">
     c.trial("min_5").laws.minLength(5);
     c.trial("max_5").laws.maxLength(5);
     c.trial("contains_hello").laws.contains("hello");
     c.trial("equals_james").laws.is("james");
     c.trial("not_equals_paulo").laws.not("paulo");
-        </pre>
+</pre>
       </section>
     </div>
 
