Hide the icons until first judge to prevent flicker

--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
 
         <form>
           Min 5 characters: <br>
-          <div id="min_5"><input type="text"> <img src="images/failed.png"></div>
+          <div id="min_5"><input type="text"> <img src="images/failed.png" style="display: none;"></div>
           <br>
           Max 5 characters:<br>
-          <div id="max_5"><input type="text"> <img src="images/failed.png"></div>
+          <div id="max_5"><input type="text"> <img src="images/failed.png" style="display: none;"></div>
           <br>
           Must contain 'hello': <br>
-          <div id="contains_hello"><input type="text"> <img src="images/failed.png"></div>
+          <div id="contains_hello"><input type="text"> <img src="images/failed.png" style="display: none;"></div>
           <br>
           Must equal 'james':<br>
-          <div id="equals_james"><input type="text"> <img src="images/failed.png"></div>
+          <div id="equals_james"><input type="text"> <img src="images/failed.png" style="display: none;"></div>
           <br>
           Must not equal 'paulo':<br>
-          <div id="not_equals_paulo"><input type="text"> <img src="images/failed.png"></div>
+          <div id="not_equals_paulo"><input type="text"> <img src="images/failed.png" style="display: none;"></div>
         </form>
       </section>
       <br>
